# code-insight

./: .gitignore  LICENSE  README.md  logger.yaml  pyproject.toml  requirements.txt
libs/: project_loader.py
libs/config/: app_config.py  app_configuration.py  app_initializer.py  app_module.py
libs/core/: module.py
libs/core/code/: base_code_parser.py  code_models.py
libs/core/code/impl/: python_code_parser.py
libs/core/graph/: base_graph_converter.py  graph_models.py
libs/core/graph/impl/: neo4j_graph_converter.py
libs/core/persistent/: base_persistent_saver.py  persistent_models.py
libs/core/persistent/impl/: mysql_persistent_saver.py
libs/utils/: log_helper.py  task_initializer.py  timing.py
tests/: test_parse_python_file.py
