[project]
name = "code-insight"
version = "0.1.0"
description = ""
authors = [
    {name = "eric",email = "whatisjava@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "langchain (>=1.0.3,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "colorlog (>=6.10.1,<7.0.0)",
    "pyrootutils (>=1.0.4,<2.0.0)",
    "py2neo (>=2021.2.4,<2022.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
